# JobSpy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  JobSpy.postman_collection.json  JobSpy_Demo.ipynb  LICENSE  README.md  app.py  config.py  config_sensitive_template.py  env (1)  increment_version.py  job_search.py  job_search_advanced.py  main.py  proxy_utils.py  pyproject.toml  requirements.txt  settings.py  setup_config.py  test.py  text2.html
.docker/: config.json
.github/workflows/: docker-build.yml  publish-to-pypi.yml  python-test.yml  test.yml
api/: __init__.py
api/auth/: __init__.py  auth_utils.py  db_utils.py
api/auth/register/: __init__.py
api/auth/token/: __init__.py
api/core/: utils.py
api/core/formatters/: __init__.py
api/core/jobs/: __init__.py
api/core/scrapers/: __init__.py
api/core/users/: __init__.py
api/v1/: __init__.py
examples/: JobSpy_AllSites.py  JobSpy_Demo.py  JobSpy_LongScrape.py  JobSpy_LongScrape_Threaded.py  location.json
postman/: JobSpy.postman_collection.json  JobSpy.postman_environment.json
python_jobspy/jobspy/: __init__.py
python_jobspy/tests/: test_indeed.py  test_ziprecruiter.py
src/: __init__.py  location_seed.json  main.py  scrape.py  telegram_bot.py  title_seed.json
src/config/: cache_manager.py  settings.py
src/dao/: mongoDAO.py
src/db/: Position.py  User.py  job_repository.py  monogo_db.py  position_repository.py  user_repository.py
src/jobs/: __init__.py
src/jobspy/: __init__.py  main.py  telegram_bot.py  telegram_handler.py  utils.py
src/model/: Position.py  User.py  job_repository.py  monogo_db.py  user_repository.py
src/scrapers/: __init__.py  exceptions.py  scraper.py  scraper_input.py  site.py  utils.py
src/telegram_handler/: __init__.py  start_handler_constats.py  telegram_all_handler.py  telegram_callback_handler.py  telegram_default_handler.py  telegram_goozali_handler.py  telegram_handler.py  telegram_indeed_handler.py  telegram_myinfo_handler.py  telegram_start_handler.py
src/tests/: test_all.py  test_db.py  test_glassdoor.py  test_goozali.py  test_indeed.py  test_linkedin.py  test_telegram.py  test_util.py  test_ziprecruiter.py
src/tools/: tools.py
tests/: goozali_response_example.json  test_all.py  test_db.py  test_glassdoor.py  test_google.py  test_goozali.py  test_indeed.py  test_linkedin.py  test_util.py  test_ziprecruiter.py
(+75 files in other folders)
